bub/grammar/BubParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .BubListener import BubListener
else:
    from BubListener import BubListener


class BubParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'\n'", u"';'", u"':='", u"'='", u"'('", 
                     u"')'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"NUM", 
                      u"STR", u"ID", u"CMT", u"WS" ]

    RULE_start = 0
    RULE_stmts = 1
    RULE_stmt = 2
    RULE_cmd = 3
    RULE_expr = 4
    RULE_args = 5
    RULE_arg = 6
    RULE_kwarg = 7

    ruleNames =  [ "start", "stmts", "stmt", "cmd", "expr", "args", "arg", 
                   "kwarg" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    NUM=7
    STR=8
    ID=9
    CMT=10
    WS=11

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmts(self):
            return self.getTypedRuleContext(BubParser.StmtsContext,0)


        def getRuleIndex(self):
            return BubParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.exitStart(self)




    def start(self):

        localctx = BubParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.stmts()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BubParser.StmtContext)
            else:
                return self.getTypedRuleContext(BubParser.StmtContext,i)


        def getRuleIndex(self):
            return BubParser.RULE_stmts

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.enterStmts(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.exitStmts(self)




    def stmts(self):

        localctx = BubParser.StmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmts)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BubParser.T__0) | (1 << BubParser.T__1) | (1 << BubParser.T__4) | (1 << BubParser.NUM) | (1 << BubParser.STR) | (1 << BubParser.ID))) != 0):
                self.state = 18
                self.stmt()
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmd(self):
            return self.getTypedRuleContext(BubParser.CmdContext,0)


        def EOF(self):
            return self.getToken(BubParser.EOF, 0)

        def getRuleIndex(self):
            return BubParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = BubParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 29
            token = self._input.LA(1)
            if token in [BubParser.T__4, BubParser.NUM, BubParser.STR, BubParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 24
                self.cmd()
                self.state = 25
                _la = self._input.LA(1)
                if not(((((_la - -1)) & ~0x3f) == 0 and ((1 << (_la - -1)) & ((1 << (BubParser.EOF - -1)) | (1 << (BubParser.T__0 - -1)) | (1 << (BubParser.T__1 - -1)))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self.consume()

            elif token in [BubParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.match(BubParser.T__0)

            elif token in [BubParser.T__1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 28
                self.match(BubParser.T__1)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CmdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BubParser.RULE_cmd

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CallContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BubParser.CmdContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(BubParser.ExprContext,0)

        def args(self):
            return self.getTypedRuleContext(BubParser.ArgsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.exitCall(self)


    class AssignmentContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BubParser.CmdContext)
            super().__init__(parser)
            self.name = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(BubParser.ExprContext,0)

        def ID(self):
            return self.getToken(BubParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.exitAssignment(self)


    class DeclarationContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BubParser.CmdContext)
            super().__init__(parser)
            self.name = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(BubParser.ExprContext,0)

        def ID(self):
            return self.getToken(BubParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.exitDeclaration(self)



    def cmd(self):

        localctx = BubParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_cmd)
        try:
            self.state = 40
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = BubParser.CallContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.expr()
                self.state = 32
                self.args()
                pass

            elif la_ == 2:
                localctx = BubParser.DeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                localctx.name = self.match(BubParser.ID)
                self.state = 35
                self.match(BubParser.T__2)
                self.state = 36
                self.expr()
                pass

            elif la_ == 3:
                localctx = BubParser.AssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 37
                localctx.name = self.match(BubParser.ID)
                self.state = 38
                self.match(BubParser.T__3)
                self.state = 39
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BubParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StrContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BubParser.ExprContext)
            super().__init__(parser)
            self.atom = None # Token
            self.copyFrom(ctx)

        def STR(self):
            return self.getToken(BubParser.STR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.enterStr(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.exitStr(self)


    class CmdExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BubParser.ExprContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def cmd(self):
            return self.getTypedRuleContext(BubParser.CmdContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.enterCmdExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.exitCmdExpr(self)


    class NumContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BubParser.ExprContext)
            super().__init__(parser)
            self.atom = None # Token
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(BubParser.NUM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.enterNum(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.exitNum(self)


    class IdContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BubParser.ExprContext)
            super().__init__(parser)
            self.atom = None # Token
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(BubParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.exitId(self)



    def expr(self):

        localctx = BubParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expr)
        try:
            self.state = 49
            token = self._input.LA(1)
            if token in [BubParser.NUM]:
                localctx = BubParser.NumContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                localctx.atom = self.match(BubParser.NUM)

            elif token in [BubParser.STR]:
                localctx = BubParser.StrContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                localctx.atom = self.match(BubParser.STR)

            elif token in [BubParser.ID]:
                localctx = BubParser.IdContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                localctx.atom = self.match(BubParser.ID)

            elif token in [BubParser.T__4]:
                localctx = BubParser.CmdExprContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 45
                self.match(BubParser.T__4)
                self.state = 46
                self.cmd()
                self.state = 47
                self.match(BubParser.T__5)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BubParser.ArgContext)
            else:
                return self.getTypedRuleContext(BubParser.ArgContext,i)


        def kwarg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BubParser.KwargContext)
            else:
                return self.getTypedRuleContext(BubParser.KwargContext,i)


        def getRuleIndex(self):
            return BubParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.exitArgs(self)




    def args(self):

        localctx = BubParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BubParser.T__4) | (1 << BubParser.NUM) | (1 << BubParser.STR) | (1 << BubParser.ID))) != 0):
                self.state = 53
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 51
                    self.arg()
                    pass

                elif la_ == 2:
                    self.state = 52
                    self.kwarg()
                    pass


                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BubParser.ExprContext,0)


        def getRuleIndex(self):
            return BubParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.exitArg(self)




    def arg(self):

        localctx = BubParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class KwargContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def expr(self):
            return self.getTypedRuleContext(BubParser.ExprContext,0)


        def ID(self):
            return self.getToken(BubParser.ID, 0)

        def getRuleIndex(self):
            return BubParser.RULE_kwarg

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.enterKwarg(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, BubListener ):
                listener.exitKwarg(self)




    def kwarg(self):

        localctx = BubParser.KwargContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_kwarg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            localctx.name = self.match(BubParser.ID)
            self.state = 61
            self.match(BubParser.T__3)
            self.state = 62
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx




